backpack/src/snapshots/backpack__config__tests__with_no_global_folder-3.snap
---
source: backpack/src/config.rs
expression: filled_config
---
(
    Config {
        project_sources: Some(
            [
                ProjectSource {
                    name: "community",
                    link: "https://raw.githubusercontent.com/rusty-ferris-club/backpack-tap/main/integration-test.yaml",
                },
            ],
        ),
        projects: Some(
            {
                "rust": Project {
                    shortlink: "rusty-ferris-club",
                    is_git: None,
                    description: None,
                    source: External,
                    mode: None,
                    actions: None,
                    swaps: None,
                },
            },
        ),
        vendors: None,
    },
    Global,
)
